# proxysetup

./: .env  Cargo.toml  README.md  proxy_project.spec
config/: proxy.json
src/: acl.rs  admin_dashboard.html  admin_login.html  auth.rs  cache.rs  config_manager.rs  config_page.html  lib.rs  logger.rs  main.rs  proxy.rs  rate_limiter.rs  tls.rs  users.rs  web.rs
static/: admin.html  config.html  login.html
