[package]
name = "proxy_project"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
hyper-tls = "0.5"
rustls = "0.20"
tokio-rustls = "0.23"
prometheus = "0.13"
warp = "0.3"
log = "0.4"
env_logger = "0.10"
lazy_static = "1.4"
rustls-pemfile = "1.0"
lru = "0.7" 