[package]
name = "proxy_project"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
warp = "0.3"
hyper = { version = "0.14", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.9"
lazy_static = "1.4"
prometheus = { version = "0.13", features = ["process"] }
futures-util = "0.3"
hyper-tls = "0.5"
rustls = "0.20"
tokio-rustls = "0.23"
rustls-pemfile = "1.0"
lru = "0.7"
chrono = "0.4"
regex = "1.5"
ipnet = "2.7" 